--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,16 +7,74 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web Page is created to introduce innovative technologies in agricultural and food industry enterprises, the essence of which is to: acquaint the heads of enterprises with technologies by demonstrating experimental samples created by the author; provide a detailed description of the technological process and lines; demonstrate processes by obtaining test samples of finished products so that the service personnel can fully master the production process."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="beekeeping, innovations, beebread, honey, bees, honey naturalness, naturalness, jams, purees, invert syrup, syrup, invertase, churchkhela, invert sugar,ინვერსიული სიროფი,ინვერტაზა ,საქარაზა,თაფლის ნატურალობის დადგენა, თაფლი, ნატურალობა, ინოვაცია, ინოვაციები, ჭეო,კანდი,მურაბები,ხილფაფები, წარმოება, ჩურჩხლა, ჩურჩხლის წარმოება,Инвертный сироп,Инвертаэа,Натуральность меда,меда, Канди, Перга,Варенья, Повидла,Чурчхела "
+    />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <link rel="icon" href="./images/Logo.svg" />
+    <title>Innovations in Beekeeping</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Innovations",
+        "name": "Innovations in Beekeeping",
+        "author": {
+          "@type": "Person",
+          "name": "George Madzgarashvili"
+        },
+        "productDescription": [
+          {
+            "image": "./images/invertSyrup.jpg",
+            "heading": "Inverted sugar syrup ",
+            "subheading": "For bees and foodstuffs",
+            "paragraph": "Characteristics: absence of 5-hydroxymethylfurfural (HMF) and coloring agents detrimental to health, they are formed during acid hydrolysis of sugar when it is overheated. The method of obtaining the product involves the use of the enzyme invertase (sucrase, β-Fructofuranosidase) at a temperature of no more than 65 ± 2°C and its subsequent concentration to 81-82 wt.%..."
+          },
+          {
+            "image": "./images/invertase.jpg",
+            "heading": "Invertase (sucrase, β-fructofuranosidase)",
+            "subheading": "Under the trade name “Hydrolytic Agent” — for the hydrolysis of food sugar, for bees and humans.It is also used as a nutrient medium for some microbial cultures.",
+            "paragraph": " Characteristics: works to catalyze the cleavage of sucrose into simple sugars in an aqueous solution, without the formation of the harmful substance 5-hydroxymethylfurfural (HMF) (unlike acid catalysts). Its activity is expressed in international units (IU), standardized with a filler (ground sugar), manufactured according to the standard of company # 212 00 269-002-2023 (“Demetra” LLC), sterilized to suppress the activity of microbial biomass used in catalysis, protected from oxidation by removing excess water during preparation, and storing it in a neutral gas (CO2) area."
+          },
+
+          {
+            "image": "./images/honeyNat.png",
+            "heading": "Honey Naturalness",
+            "subheading": "Determining by express method",
+            "paragraph": "The method is based on the high-temperature (up to 100°C) effect of an aqueous extract of leaf mass of trees and plants on honey. An insoluble precipitate of a group of substances appears in the mixture, the amount and volume of which (obtained by self-precipitation) depends on the botanical origin of honey (5-10 ml). In the case of adulteration of the product, the amount of precipitation decreases or does not appear at all in the absence of honey in the product under study. The method is recommended for detecting gross adulteration (the content of the surrogate is 35 wt.% or more) in a large batch of honey"
+          },
+          {
+            "image": "./images/candy.jpg",
+            "heading": "Candy(paste feed)",
+            "subheading": "Containing only monosaccharides for bees",
+            "paragraph": "Unlike the traditional method of making candy (by Scholz), this  method involves complete enzymatic hydrolysis of the basic raw material - food sugar, thickening of the resulting product at a low (safe) temperature and achieving rapid crystallization, which avoids: multicomponent, expensive equipment, high energy costs, the physiological perfection of food and a significant economic effect are achieved…"
+          },
+          {
+            "image": "./images/bee-bread.png",
+            "heading": "Making bee bread, an environmentally friendly product",
+            "subheading": "Without beehive (honeycombs)",
+            "paragraph": "Characteristics: Both in nature and in the factory, bee bread is produced through the fermentation of pollen mainly caused by lactic acid bacteria. This solution allows us to avoid impurities, significantly reduce the canning time and production cost..."
+          },
+          {
+            "image": "./images/appleJam.jpg",
+            "heading": "Jams and purees",
+            "subheading": "Environmentally sound technologies for the production",
+            "paragraph": "Characteristics: Absence of coloring substances formed during the oxidation of harmful 5-hydroxymethylfurfural and phenolic compounds; possibility of using a low-temperature mode of concentration of a mixture of fruit and carbohydrate syrup by reducing the duration of the process; preservation of the presentation of the finished product (color, smell, taste, mechanical properties); improved economic indicators..."
+          },
+          {
+            "image": "./images/churchkela.png",
+            "heading": "Churchkhela  Georgian delicacy ",
+            "subheading": "Improved method of making",
+            "paragraph": "Characteristics: prevention of the formation of 5-hydroxymethylfurfural (HMF) and oxidation of phenolic compounds during production; accelerated thickening of grape juice (Badagi) at low temperature and obtaining an environmentally safe product by conditioning its mixture with wheat flour hydrolysate; reduction of the total duration of the process from 165 to 28-30 hours; improved economic indicators..."
+          }
+        ]
+      }
+    </script>
   </body>
 </html>
