add google verification

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 
     <link rel="icon" href="./images/Logo.svg" />
     <title>Innovations in Beekeeping</title>
+    <meta
+      name="google-site-verification"
+      content="r60H0_6lB4xL9N2uni42BcEmNcggC9HTXyTSaT136Bg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
